--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <i class="fa fa-bars"></i>
             </label>
             <ul class="list">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="About-Project.html" target="_blank">About-Project</a></li>
-                <li><a href="#">Github-Link</a></li>
+                <li><a href="https://github.com/yash-2096/tyash1519Project.github.io">Github-Link</a></li>
             </ul>
         </div>
 </nav>
